# desktop-notify

./: CLAUDE.md  Cargo.toml
src/: fallback.rs  lib.rs  linux.rs  macos.rs
