[package]
name = "desktop-notify"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Cross-platform desktop notifications via D-Bus (Linux) and terminal-notifier/osascript (macOS)"

[dependencies]
tracing = "0.1"
tokio = { version = "1", features = ["process", "time", "sync", "macros"] }

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "5", default-features = false, features = ["tokio"] }
futures-lite = "2"
